--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,7 +18,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	background-color: rgb(235, 224, 210);
+	background-color: white;
 }
 
 header{
@@ -27,6 +27,34 @@ header{
     height: 10vh;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 5px 5px gray;
+    .image{
+        display: flex;
+        width: 20%;
+        height: 100%;
+        align-items: center;
+    }
+    .user{
+        display: flex;
+        width: 40%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    .edit{
+        display: flex;
+        width: 20%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    .logout{
+        display: flex;
+        width: 20%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 main{
