--- a/scss/style-edit.scss
+++ b/scss/style-edit.scss
@@ -28,6 +28,7 @@ header{
     height: 10vh;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 5px 5px gray;
     position: relative;
     .back{
         position: absolute;
@@ -35,3 +36,22 @@ header{
     }
 }
 
+main{
+    display: flex;
+    width: 100%;
+    height: 40vh;
+    justify-content: center;
+    align-items: center;
+    .formularz{
+        display: flex;
+        width: 40vh;
+        height: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        h2{
+            width: 100%;
+        }
+    }
+}
