--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,10 +2,11 @@
 	margin: 0;
 	padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    color: #424242;
 }
 
 a {
-	text-decoration: none;
+	text-decoration: underline;
 }
 
 body,
@@ -48,9 +49,13 @@ header{
         justify-content: center;
         align-items: center;
     }
+    .admin{
+        display: flex;
+        width: 10%;
+    }
     .logout{
         display: flex;
-        width: 20%;
+        width: 10%;
         height: 100%;
         justify-content: center;
         align-items: center;
@@ -65,27 +70,33 @@ main{
     align-items: center;
     flex-direction: column;
     gap: 2.5vh;
+    margin-top: 20px;
     .article{
         display: flex;
         width: 50vh;
         height: auto;
-        align-items: center;
-        justify-content: center;
+        float: left;
+        // align-items: center;
+        // justify-content: center;
         flex-wrap: wrap;
-        border: 2px solid black;
+        // border: 2px solid black;
         border-radius: 12.5px;
         > h2{
             width: 100%;
-            text-align: center;
+            // text-align: center;
         }
         > p{
             width: 100%;
-            text-align: center;
+            // text-align: center;
         }
         .content{
             margin-top: 2vh;
             width: 100%;
-            text-align: center;
+            // text-align: center;
         }
+        
     }
+    hr{
+            width: 50vh;
+        }
 }
