--- a/scss/stylel.scss
+++ b/scss/stylel.scss
@@ -19,6 +19,9 @@ body {
 	flex-direction: column;
 	overflow: hidden;
 	background-color: white;
+    background-image: url('../assets/background.jpg');
+    background-size: cover;
+    background-position: center;
 }
 
 main{
@@ -29,35 +32,76 @@ main{
     align-items: center;
     border-radius: 5px;
     flex-wrap: wrap;
-    .box{
-        padding: 10px;
-        box-shadow: 0px 0px 24px 0px rgba(66,68,90,1);
-        border-radius: 12.5px;
-    .img{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-
-
-    .login{
-        width: 230px;
-        // height: 30%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        padding: 10px;
-        .submit{
-            display: flex;
-            justify-content: center;
+    .wrapper{
+        width: 420px;
+        color: #fff;
+        border-radius: 10px;
+        padding: 30px 40px;
+        background: transparent;
+        border: 2px solid rgba(255, 255, 255, .2);
+        backdrop-filter: blur(20px);
+        box-shadow: 0 0 10px rgba(255, 255, 255, .2);
+        h1{
+            font-size: 36px;
             text-align: center;
         }
-        p{
-            width: 100%;  
-            text-align: center;  
+        .input-box{
+            position: relative;
+            width: 100%;
+            height: 50px;
+            margin: 30px 0;
+            i{
+                position: absolute;
+                right: 20px;
+                top: 50%;
+                transform: translateY(-50%);
+                font-size: 20px;
+            }
+            input{
+                width: 100%;
+                height: 100%;
+                background: transparent;
+                border: none;
+                outline: none;
+                border: 2px solid rgba(255, 255, 255, .2);
+                border-radius: 40px;
+                font-size: 16px;
+                box-sizing: border-box;
+                color: #fff;
+                padding: 2px 4.5px 2px 20px;
+                // margin-left: 10px;
+                &::placeholder{
+                    color: #fff;
+                    margin-left: 5px;
+                }
+            
+            }
+        }
+        .btn{
+            width: 100%;
+            height: 45px;
+            background: #fff;
+            border: none;
+            outline: none;
+            border-radius: 40px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+            cursor: pointer;
+            font-size: 16px;
+            color: #333;
+            font-weight: 600;
+        }
+        .register-link{
+            font-size: 14.5px;
+            text-align: center;
+            margin: 20px 0 15px;
+            p a{
+                color: #fff;
+                text-decoration: none;
+                font-weight: 600;
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
         }
     }
-}
 }
