--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,54 +13,116 @@ body,
 html {
 	width: 100%;
 	height: auto;
+
 }
 
 body {
 	display: flex;
 	flex-direction: column;
-	overflow: hidden;
+	overflow-x: hidden;
 	background-color: white;
 }
-
 header{
     display: flex;
-    width: 100%;
-    height: 10vh;
     justify-content: center;
-    align-items: center;
-    box-shadow: 0px 5px 5px gray;
-    .image{
+    width: 100%;
+    height: 60vh;
+    .header-background{
         display: flex;
-        width: 20%;
+        width: 95%;
         height: 100%;
-        align-items: center;
-    }
-    .user{
-        display: flex;
-        width: 40%;
-        height: 100%;
+        // background-color: blue;
         justify-content: center;
-        align-items: center;
-    }
-    .edit{
-        display: flex;
-        width: 20%;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-    .admin{
-        display: flex;
-        width: 10%;
-    }
-    .logout{
-        display: flex;
-        width: 10%;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
+        border-radius: 52px;
+        margin-top: 20px;
+        background-image: url('../assets/background2.jpg');
+        background-position: center;
+        background-size: cover;
+        flex-wrap: wrap;
+        .header-bar{
+            display: flex;
+            margin-top: 20px;
+            width: 98%;
+            height: 8vh;
+            justify-content: center;
+            align-items: center;
+            // box-shadow: 0px 5px 5px gray;
+            background-color: #fff;
+            border-radius: 50px;
+            .title{
+                display: flex;
+                width: 55%;
+                >h1{
+                    color: #182919;
+                    font-size: 40px;
+                }
+            }
+            // .user{
+            //     display: flex;
+            //     width: 40%;
+            //     height: 100%;
+            //     justify-content: center;
+            //     align-items: center;
+            // }
+            .edit{
+                display: flex;
+                width: 20%;
+                height: 100%;
+                justify-content: center;
+                align-items: center;
+                color: #182919;
+            }
+            .admin{
+                display: flex;
+                width: 10%;
+                color: #182919;
+            }
+            .logout{
+                display: flex;
+                width: 10%;
+                height: 100%;
+                justify-content: center;
+                align-items: center;
+                color: #182919;
+            }
+        }
+        .header-content{
+            display: flex;
+            flex-wrap: wrap;
+            float: left;
+            width: 60%;
+            height: 30vh;
+            color: #fff;
+            span{
+                width: 100%;
+                height: auto;
+                font-size: 15px;
+                >h2{
+                    color: #fff;
+                    font-weight: 100;
+                }
+            }
+            .content-content{
+                width: 100%;
+                height: auto;
+                font-size: 55px;
+                >h1{
+                    color: #fff;
+                }
+            }
+            .small-text{
+                width: 100%;
+                height: auto;
+                font-size: 15px;
+                >h2{
+                    color: #fff;
+                    font-weight: 100;
+                }
+            }
+        }
     }
 }
+
 
 main{
     display: flex;
@@ -71,16 +133,39 @@ main{
     flex-direction: column;
     gap: 2.5vh;
     margin-top: 20px;
+    .latest{
+        display: flex;
+        width: 100%;
+        height: 100px;
+        // background-color: red;
+        align-items: center;
+        padding-left: 350px;
+        >h1{
+            color: #182919;
+            font-size: 50px;
+        }
+    }
     .article{
         display: flex;
-        width: 50vh;
+        width: 80vh;
         height: auto;
         float: left;
+        border: 2px solid gray;
+        padding: 10px;
         // align-items: center;
         // justify-content: center;
         flex-wrap: wrap;
         // border: 2px solid black;
         border-radius: 12.5px;
+        .article-image{
+            display: flex;
+            width: 100%;
+            >img{
+                width: 60vh;
+                justify-content: center;
+                
+            }
+        }
         > h2{
             width: 100%;
             // text-align: center;
@@ -98,5 +183,5 @@ main{
     }
     hr{
             width: 50vh;
-        }
+    }
 }
