--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,7 +53,7 @@ header{
                 display: flex;
                 width: 55%;
                 >h1{
-                    color: #182919;
+                    color: rgb(153, 152, 152);
                     font-size: 40px;
                 }
             }
@@ -70,12 +70,12 @@ header{
                 height: 100%;
                 justify-content: center;
                 align-items: center;
-                color: #182919;
+                color: rgb(153, 152, 152);
             }
             .admin{
                 display: flex;
                 width: 10%;
-                color: #182919;
+                color: rgb(153, 152, 152);
             }
             .logout{
                 display: flex;
@@ -83,7 +83,7 @@ header{
                 height: 100%;
                 justify-content: center;
                 align-items: center;
-                color: #182919;
+                color: rgb(153, 152, 152);
             }
         }
         .header-content{
@@ -93,21 +93,12 @@ header{
             width: 60%;
             height: 30vh;
             color: #fff;
-            span{
-                width: 100%;
-                height: auto;
-                font-size: 15px;
-                >h2{
-                    color: #fff;
-                    font-weight: 100;
-                }
-            }
             .content-content{
                 width: 100%;
                 height: auto;
                 font-size: 55px;
                 >h1{
-                    color: #fff;
+                    color: silver;
                 }
             }
             .small-text{
@@ -115,7 +106,7 @@ header{
                 height: auto;
                 font-size: 15px;
                 >h2{
-                    color: #fff;
+                    color: silver;
                     font-weight: 100;
                 }
             }
@@ -130,7 +121,7 @@ main{
     height: auto;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 2.5vh;
     margin-top: 20px;
     .latest{
@@ -141,47 +132,152 @@ main{
         align-items: center;
         padding-left: 350px;
         >h1{
-            color: #182919;
+            color: rgb(153, 152, 152);
             font-size: 50px;
+        }
+    }
+    .kategorie{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        span{
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+            padding: 0px 15px 0px 15px;
+            width: auto;
+            height: 40px;
+            border-radius: 50px;
+            cursor: pointer;
+            user-select: none;
+            // background-color: red;
+            border: 1px solid #182919;
+            .input-box{
+                position: relative;
+                width: 100%;
+                height: 100%;
+                i{
+                    position: absolute;
+                    // left: 2px;
+                    transform: translateY(70%);
+                    // transform: translateX(-2%);
+                    font-size: 15px;
+                }
+                input{
+                    width: 100%;
+                    height: 100%;
+                    background: transparent;
+                    border: none;
+                    outline: none;
+                    font-size: 16px;
+                    box-sizing: border-box;
+                    padding: 2px 4.5px 2px 20px;
+                    &::placeholder{
+                        margin-left: 10px;
+                    }
+                }
+            }
         }
     }
     .article{
         display: flex;
-        width: 80vh;
-        height: auto;
+        width: auto;
+        height: 50vh;
         float: left;
         border: 2px solid gray;
         padding: 10px;
-        // align-items: center;
-        // justify-content: center;
         flex-wrap: wrap;
-        // border: 2px solid black;
         border-radius: 12.5px;
+        max-width: 50vh;
         .article-image{
             display: flex;
-            width: 100%;
+            max-height: 60%;
+            overflow-y: hidden;
+            justify-content: center;
+            border-radius: 8px;
+            width: 50vh;
             >img{
-                width: 60vh;
+                height: max-content;
+                width: 100%;
+                border-radius: 8px;
                 justify-content: center;
                 
             }
         }
         > h2{
             width: 100%;
-            // text-align: center;
+            // font-weight: 400;
+            font-size: 30px;
+            text-align: center;
         }
         > p{
             width: 100%;
             // text-align: center;
         }
         .content{
-            margin-top: 2vh;
-            width: 100%;
-            // text-align: center;
+            display: block;
+            height: auto;
+            overflow: hidden;
+            position: relative;
         }
+
+        .read-more {
+            display: inline-block;
+            margin-top: 10px;
+            font-weight: bold;
+            color: #007bff;
+            text-decoration: none;
+            display: none; 
+          }
         
     }
-    hr{
-            width: 50vh;
+}
+
+footer{
+    display: flex;
+    width: 100%;
+    height: 200px;
+    // background-color: red;
+    justify-content: center;
+    margin-top: 30px;
+    .footer-info{
+        width: 60%;
+        height: 100%;
+        .footer-up{
+            position: relative;
+            width: 100%;
+            height: 70%;
+            .footer-left{
+                position: absolute;
+                left: 0px;
+                top: 10px;
+                width: 200px;
+                height: 100%;
+                h3{
+                    color: black;
+                    font-size: 25px;
+                }
+            }
+            .footer-right{
+                position: absolute;
+                text-align: right;
+                top: 10px;
+                right: 0px;
+                width: 200px;
+                height: 100%;
+                box-icon{
+                    cursor: pointer;
+                }
+            }
+        }
+        .footer-down{
+            width: 100%;
+            height: 30%;
+            gap: 10px;
+            word-spacing: 2px;
+        }
     }
 }
