--- a/scss/style-edit.scss
+++ b/scss/style-edit.scss
@@ -21,14 +21,16 @@ body {
 	overflow: hidden;
 	background-color: white;
 }
-
+img{
+        width: 70px;
+        height: 60px;
+    }
+    
 header{
     display: flex;
     width: 100%;
     height: 10vh;
-    justify-content: center;
     align-items: center;
-    box-shadow: 0px 5px 5px gray;
     position: relative;
     .back{
         position: absolute;
@@ -36,20 +38,32 @@ header{
     }
 }
 
+ 
 main{
+   
     display: flex;
     width: 100%;
-    height: 40vh;
-    justify-content: center;
-    align-items: center;
+    height: 45vh;
+   
     .formularz{
+        form{
+        padding: 10px;
+        
+        .title{
+            width: 40%;
+        }
+        input[type=text]{
+            width: 100%;
+        }
+    }    
+        
         display: flex;
-        width: 40vh;
+        // width: 40vh;
         height: 100%;
         flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
+        justify-content: start;
+        align-items: start;
+        text-align: start;
         h2{
             width: 100%;
         }
