--- a/scss/style-edit.scss
+++ b/scss/style-edit.scss
@@ -56,9 +56,8 @@ main{
             width: 100%;
         }
     }    
-        
         display: flex;
-        // width: 40vh;
+        width: 50%;
         height: 100%;
         flex-wrap: wrap;
         justify-content: start;
@@ -68,4 +67,27 @@ main{
             width: 100%;
         }
     }
+    .lista{
+        width: 50%;
+        span#space {
+            left: 10px;
+            width: 100px;
+        }
+        li {
+            display: flex;
+            justify-content: space-between;
+        }
+        .article-info{
+            width: 50%;
+        }
+        .actions{
+            width: 50%;
+        }
+
+        li:nth-child(even) {
+            background-color: rgb(0, 153, 255);
+          }
+    }
 }
+
+
