--- a/scss/style.scss
+++ b/scss/style.scss
@@ -91,7 +91,7 @@ header{
             flex-wrap: wrap;
             float: left;
             width: 60%;
-            height: 30vh;
+            height: 70%;
             color: #fff;
             .content-content{
                 width: 100%;
@@ -278,6 +278,112 @@ footer{
             height: 30%;
             gap: 10px;
             word-spacing: 2px;
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    header{
+        display: flex;
+        width: 100%;
+        height: 350px;
+        .header-background{
+            display: flex;
+            width: 95%;
+            // border-radius: calc(50px-2,5%);
+            .header-bar{
+                display: flex;
+                justify-content: space-between;
+                height: 20%;
+                width: 95%;
+                // padding: 0px 5px 0px 5px;
+                padding: 0;
+                .title{
+                    display: flex;
+                    height: 100%;
+                    width: 25%;
+                    // text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                        h1{
+                            font-size: 24px;
+                        }
+                }
+                .edit{
+                    text-align: center;
+                    width: 25%;
+                }
+                .admin{
+                    height: 100%;
+                    width: 25%;
+                    justify-content: center;
+                    align-items: center;
+                }
+                .logout{
+                    width: 25%;
+                }
+
+
+            }
+            .header-container{
+                width: 100%;
+                height: 70%;
+                .header-content{
+                    width: 100%;
+                    height: 100%;
+                    .content-content{
+                        h1{
+                            font-size: 30px;
+                        }
+                    }
+                    .small-text{
+                        h2{
+                            font-size: medium;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    main{
+        display: flex;
+        width: 100%;
+        height: auto;
+        .latest{
+            display: flex;
+            width: 90%;
+            height: 50px;
+            justify-content: flex-start;
+            padding: 0px;
+            h1{
+                font-size: 25px;
+            }
+        }
+        .kategorie{
+            display: flex;
+            width: 100%;
+            flex-wrap: wrap;
+        }
+        .article{
+            display: flex;
+            width: 90%;
+        }
+    }
+    footer{
+        .footer-info{
+            width: 90%;
+        }
+    }
+    
+}
+
+@media (min-width:993px) and (max-width: 1560px) {
+    header{
+        .header-background{
+            .header-content{
+                width: 100%;
+                height: 70%;
+            }
         }
     }
 }
