--- a/scss/style.scss
+++ b/scss/style.scss
@@ -317,7 +317,8 @@ footer{
                     justify-content: center;
                     align-items: center;
                         h1{
-                            font-size: 24px;
+                            text-align: center;
+                            font-size: 20px;
                         }
                 }
                 .edit{
